Add sorting parameter for replies
